--- a/js_part_01/index.html
+++ b/js_part_01/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../js_part_01/bai_1_2.js"></script>
+    <script src="../js_part_01/bai_3.js"></script>
 </head>
 
 <body>
